--- a/app.css
+++ b/app.css
@@ -104,7 +104,7 @@ textarea{
 }
 
 .navbar ul li{
-    display: inline-block;
+    /*display: inline-block;*/
     color: #ffffff;
     width: 120px;
     line-height: 40px;
